# bookish

./: .gitignore  Cargo.toml  README.md
migrations/20160602211005_create_authors/: up.sql
migrations/20160603074352_add_middle_name_to_authors/: down.sql  up.sql
migrations/20160603075610_create_books/: down.sql  up.sql
migrations/20160603204631_remove_published_from_authors/: down.sql  up.sql
src/: lib.rs  models.rs
