[package]
name = "bookish"
version = "0.1.0"
authors = ["Paul A. Jungwirth <pj@illuminatedcomputing.com>"]

[dependencies]
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
time = "0.1.35"
iron = "*"

